<resources>
    <string name="app_name">Musip App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="previous">previous</string>
    <string name="play_pause">play pause</string>
    <string name="next">next</string>
    <string name="album_art">album art</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="image_algum_art">Image algum art</string>
    <string name="button_play_pause">Button play pause</string>
</resources>